src/test/ui/parser/issue-45296.rs
fn main() {
    let unused = ();

    #![allow(unused_variables)] //~ ERROR not permitted in this context
}
